# clige-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/error/: mod.rs
src/game/: level.rs  mod.rs  object.rs  player.rs  utils.rs
src/game/object/: door.rs  food.rs  item.rs  level.rs  mod.rs  weapon.rs
src/game/object/entity/: enemy.rs  mod.rs  player.rs
src/game/object/item/: food.rs  mod.rs  weapon.rs
src/object/: entity.rs  item.rs  mod.rs
