[package]
name = "clige-rs"
version = "0.1.0"
authors = ["Dominik Muc"]
edition = "2021"
description = "CLI Game Engine - clige"
readme = "README.md"
repository = "https://github.com/dominik-muc/clige-rs"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-print = "0.3.6"
